@@ -27,92 +27,6 @@ template<> SEXP as<SEXP>(SEXP m_sexp){
 	return m_sexp ;
 }
 
-template<> double as<double>(SEXP m_sexp) {
-    if (Rf_length(m_sexp) != 1) {
-	throw std::range_error("as<double> expects single value");
-    }
-    switch( TYPEOF(m_sexp) ){
-    	case LGLSXP:
-    		return internal::r_coerce<LGLSXP,REALSXP>( LOGICAL(m_sexp)[0] ) ; 
-    	case REALSXP:
-    		return REAL(m_sexp)[0] ; 
-    	case INTSXP:
-    		return internal::r_coerce<INTSXP,REALSXP>( INTEGER(m_sexp)[0] ); 
-    	case RAWSXP:
-    		return internal::r_coerce<RAWSXP,REALSXP>( RAW(m_sexp)[0] );
-    	default:
-    		throw std::range_error("as<double> invalid type");
-    }
-    return 0.0 ; 	// never reached
-}
-
-template<> int as<int>(SEXP m_sexp) {
-    if (Rf_length(m_sexp) != 1) {
-	throw std::range_error("as<int> expects single value");
-    }
-    switch( TYPEOF(m_sexp)){
-    	case LGLSXP:
-    		return internal::r_coerce<LGLSXP,INTSXP>( LOGICAL(m_sexp)[0] ) ; 
-    	case REALSXP:
-    		return internal::r_coerce<REALSXP,INTSXP>( REAL(m_sexp)[0] ); // some of this might be lost
-    	case INTSXP:
-    		return INTEGER(m_sexp)[0]; 
-    	case RAWSXP:
-    		return internal::r_coerce<RAWSXP,INTSXP>( RAW(m_sexp)[0] );
-    	default:
-    		throw std::range_error("as<int>");
-    }
-    return 0; 	// never reached
-}
-
-template<> Rbyte as<Rbyte>(SEXP m_sexp) {
-    if (Rf_length(m_sexp) != 1) {
-	throw std::range_error("as<Rbyte> expects single value");
-    }
-    switch( TYPEOF(m_sexp) ){
-    	case LGLSXP:
-    		return internal::r_coerce<LGLSXP,RAWSXP>( LOGICAL(m_sexp)[0] ) ; 
-    	case REALSXP:
-    		return internal::r_coerce<REALSXP,RAWSXP>( REAL(m_sexp)[0] );
-    	case INTSXP:
-    		return internal::r_coerce<INTSXP,RAWSXP>( INTEGER(m_sexp)[0] );
-    	case RAWSXP:
-    		return RAW(m_sexp)[0] ;
-    	default:
-    		throw std::range_error("as<Rbyte> expects raw, double or int");
-    }
-    return (Rbyte)0; 	// never reached
-}
-
-template<> bool as<bool>(SEXP m_sexp) {
-    if (Rf_length(m_sexp) != 1) {
-	throw std::range_error("as<bool> expects single value");
-    }
-    switch( TYPEOF(m_sexp) ){
-    	case LGLSXP:
-    		return LOGICAL(m_sexp)[0] ? true : false ; 
-    	case REALSXP:
-    		return double_to_bool( REAL(m_sexp)[0] ) ;
-    	case INTSXP:
-    		return int_to_bool( INTEGER(m_sexp)[0] ) ;
-    	case RAWSXP:
-    		return Rbyte_to_bool( RAW(m_sexp)[0] );
-    	default:
-    		throw std::range_error("as<bool> expects raw, double or int");
-    }
-    return false; 	// never reached
-}
-
-template<> std::string as<std::string>(SEXP m_sexp) {
-    if (Rf_length(m_sexp) != 1) {
-    	    throw std::range_error("as<std::string> expects single value");
-    }
-    if (!Rf_isString(m_sexp)) {
-    	    throw std::range_error("as<std::string> expects string");
-    }
-    return std::string(CHAR(STRING_ELT(m_sexp,0)));
-}
-
 template<> std::vector<std::string> as< std::vector<std::string> >(SEXP m_sexp){
     R_len_t n = Rf_length(m_sexp);
     std::vector<std::string> v(n);
