@@ -1,3 +1,7 @@
+2010-02-21  Romain Francois <romain@r-enthusiasts.com>
+
+	* src/Rcpp/as.h: more generic as implementation for primitive types
+
 2010-02-19  Romain Francois <romain@r-enthusiasts.com>
 
 	* src/Rcpp/as.h: as now delegates to a template class 
